--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-crewai==0.41.1
-crewai-tools==0.4.26
-requests==2.31.0
-langchain==0.1.20
-langchain-openai==0.1.8
-python-dotenv==1.0.0
+crewai
+crewai-tools
+requests
+langchain
+langchain-anthropic
+anthropic
+python-dotenv
